Redirect all links to code to their correct GitHub URL
The redirect is handled by a small JavaScript snippet in default.html
that rewrites all links that start with "../"

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -75,6 +75,18 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script type="text/javascript">
+      // Rewrite all links that start with "../" to point to the GitHub repo
+      window.onload = function(){
+        var links = document.links;
+        var i = links.length;
+        while (i--) {
+          if (links[i].getAttribute("href").slice(0, 3) == "../") {
+            links[i].href = "https://github.com/madcowswe/ODrive/blob/master/" + links[i].getAttribute("href").slice(3);
+          }
+        }
+      }
+    </script>
   </body>
 </html>
 
