--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -55,7 +55,8 @@
       <section>
 
       <div class="edit">
-        {% assign filename = page.url | replace_first: '/', '' | replace: '.html', '.md' %}
+          {% assign filename = page.url | replace_first: '/', '' | replace: '.html', '.md' %}
+          {% if filename == '' %}{% assign filename = 'getting-started.md' %}{% endif %}
         <!-- edit icon taken from GitHub -->
         <svg transform="translate(0,1)" class="octicon octicon-pencil" viewBox="0 0 14 16" version="1.1" width="10" height="12" aria-hidden="true">
           <path fill-rule="evenodd" d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 0 1 1.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"></path>
@@ -92,6 +93,9 @@
         while (i--) {
           if (links[i].getAttribute("href").slice(0, 3) == "../") {
             links[i].href = "https://github.com/madcowswe/ODrive/blob/master/" + links[i].getAttribute("href").slice(3);
+          }
+          if (links[i].getAttribute("href").slice(0, 15) == "getting-started") {
+            links[i].href = "/" + links[i].getAttribute("href").slice(15);
           }
         }
       }
