--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
+        <p><b> NOTE: This is a preview of the documentation that pertains to firmware v4.0 and later.</b></p>
 
         <ul>
           {% for section in site.data.index.sections %}
