--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -253,14 +253,14 @@ div {
 
 
 /*** Links ***/
-// a {
-//     color: #e70000;
-// }
+a {
+    color: #0366d6ff;
+}
 
-// a:hover, a:focus {
-//     color: #8b0000;
-//     font-weight: unset;
-// }
+a:hover, a:focus {
+    color: #0366d6A0;
+    font-weight: unset;
+}
 
 /*** Navigation bar ***/
 header > div {
