--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -254,11 +254,11 @@ div {
 
 /*** Links ***/
 a {
-    color: #0366d6ff;
+    color: #0366d6;
 }
 
 a:hover, a:focus {
-    color: #0366d6A0;
+    color: #0366d6;
     font-weight: unset;
 }
 
