--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@ body {
   background-color: #fff;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  color:#24292e;
   font-weight:400;
 }
 
@@ -386,14 +386,14 @@ details > div > p:last-child {
 .alert {
     padding: 10px;
     color: black;
-    background-color: #ffc40096;
+    background-color: #ffea80;
     margin-bottom: 15px;
 }
 
 .note {
     padding: 10px;
     color: black;
-    background-color: #0099ff44;
+    background-color: #c5f2ff;
     margin-bottom: 15px;
 }
 
