--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,10 +50,10 @@ a {
   text-decoration:none;
 }
 
-a:hover, a:focus {
-  color:#069;
-  font-weight: bold;
-}
+// a:hover, a:focus {
+//   color:#069;
+//   font-weight: bold;
+// }
 
 a small {
   font-size:11px;
