--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -313,10 +313,11 @@ header ul ul li a {
 //}
 
 /*** Navbar Hover ***/
-// header ul a:hover, header ul a:focus {
+header ul a:hover, header ul a:focus {
+  color: #d60000
 //   color:rgb(0, 0, 0);
 //   background-color: rgba(0, 0, 0, 0.24);
-// }
+}
 // header ul a:active {
 //   background-color:#f8f8f8;
 // }
