--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -314,7 +314,7 @@ header ul ul li a {
 
 /*** Navbar Hover ***/
 header ul a:hover, header ul a:focus {
-  color: #d60000
+  color: #d60000;
 //   color:rgb(0, 0, 0);
 //   background-color: rgba(0, 0, 0, 0.24);
 }
