--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -286,7 +286,8 @@ header ul p {
     margin:0;
     padding-left:5px;
     display: block;
-    color: black;
+    color: #d60000;
+    font-weight: bold;
     background-color: #00000034;
 }
 
