--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,6 +257,10 @@ a {
     color: #0366d6;
 }
 
+h1 a {
+    color: unset;
+}
+
 // a:hover, a:focus {
 //     color: #0366d6;
 //     font-weight: unset;
