--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -294,7 +294,7 @@ header ul p {
 //     color: #d60000;
     color: #000;
     font-weight: bold;
-    background-color: #00000034;
+    background-color: #cbcbcb;
 }
 
 header ul ul li a {
@@ -427,10 +427,10 @@ details > div > p:last-child {
 
 /*** table ***/
 table th {
-  background-color: #f1d3d3;
+  background-color: #cbcbcb;
   border: 1px solid rgba(0, 0, 0, 0.219);
 }
 
 table tr:nth-child(2n) {
-  background-color: #faf6f6;
+  background-color: #f8f8f8;
 }
