--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
           <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          <p><b> NOTE: This is a preview of the documentation that pertains to firmware v0.4.0 and later.</b></p>
+          <p>Please help improving these docs by submitting edits using the link in the top right. If you need help, please search or ask on the ODrive Community.</p>
 
           <ul id="navbar">
             {% for section in site.data.index.sections %}
