--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,6 @@
 
           <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          <p>Please help improving these docs by submitting edits using the link in the top right. If you need help, please search or ask on the ODrive Community.</p>
-
           <ul id="navbar">
             {% for section in site.data.index.sections %}
             <li>
@@ -46,6 +44,8 @@
           {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
           {% endif %}
+          
+          <p>Please help improving these docs by submitting edits using the link in the top right. If you need help, please search or ask on the <a href=https://discourse.odriverobotics.com>ODrive Community</a>.</p>
 
           {% if site.show_downloads %}
           <ul>
