--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
           {% endif %}
           
-          <p>Please help improving these docs by submitting edits using the link in the top right.</p>
-          <p>If you need help, please search or ask on the <a href=https://discourse.odriverobotics.com>ODrive Community</a>.</p>
+          <p>Help improve these docs: submit edits using the link in the top right.</p>
+          <p>If you need help, please search or ask the <a href=https://discourse.odriverobotics.com>ODrive Community</a>.</p>
 
           {% if site.show_downloads %}
           <ul>
