Add help text for missing dependencies

--- a/tools/enums_template.j2
+++ b/tools/enums_template.j2
@@ -1,5 +1,7 @@
 
 # TODO: This file is dangerous because the enums could potentially change between API versions. Should transmit as part of the JSON.
+# To regenerate this file, nagivate to the top level of the ODrive repository and run:
+#   python Firmware/interface_generator_stub.py --definitions Firmware/odrive-interface.yaml --template tools/enums_template.j2 --output tools/odrive/enums.py
 
 [%- for _, enum in value_types.items() %]
 [%- if enum.is_enum %]
