--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -300,7 +300,7 @@ header li {
 }
 
 .navgroup {
-  background: #9c9c9c;
+  background: #cbcbcb;
   margin-top: 20px;
 }
 .navgroup:first-child {
@@ -308,7 +308,7 @@ header li {
 }
 
 #navbar ul {
-  background-color: #ffffffa6;
+  background-color: #ffffffd9;
   margin: 0;
 }
 
@@ -335,6 +335,13 @@ header li {
 }
 
 .navitem a { display: block; }
+
+.levelbar {
+  float: inline-start;
+  margin-left: 8px;
+  margin-right: 5px;
+  border-left: 1px solid #0000004d;
+}
 
 .currentitem {
   //-webkit-box-shadow: inset 0px 0px 5px 3px #aa0000a6;
