Docs banner link now points to discourse topic instead of directly to github

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,7 +13,7 @@
     <![endif]-->
   </head>
   <body>
-    <div style="position: absolute;top: 0;left: 0;width: 100%;background-color: #ffec75;height: 20px;text-align: center;font-weight: 600">Firmware version v0.5.1 is coming soon. To help beta test it now, please check it out <a href="https://github.com/madcowswe/ODrive/tree/rc-v0.5.1">on GitHub</a>.</div>
+    <div style="position: absolute;top: 0;left: 0;width: 100%;background-color: #ffec75;height: 20px;text-align: center;font-weight: 600">Firmware version v0.5.1 is coming soon. To help beta test it now, please check it out <a href="https://discourse.odriverobotics.com/t/firmware-v0-5-1-release-candidate-feedback-thread/5210">on GitHub</a>.</div>
     <div class="wrapper">
       <header>
         <div>
