refactor Fibre to AsyncStream architecture
The previous implementation was based on blocking calls, i.e. the
platform dependent output channel would block on a write operation and
by extension the Fibre decoder could also block when given data by an
input channel. The revised implementation in this commit is based around
a fully asynchronous (i.e. non-blocking)  stream interface.

--- a/Firmware/fibre/cpp/endpoints_template.j2
+++ b/Firmware/fibre/cpp/endpoints_template.j2
@@ -14,6 +14,7 @@
 #define __FIBRE_ENDPOINTS_HPP
 
 #include <fibre/introspection.hpp>
+#include <fibre/../../legacy_protocol.hpp>
 
 // Note: with -Og the functions with large switch statements reserves a huge amount
 // of stack space because they reserves separate space for the stack frame of each
