Styling improvements, implemented a requirements check for choices, added indication that calibration is happening when activated

--- a/GUI/src/assets/styles/style.css
+++ b/GUI/src/assets/styles/style.css
@@ -16,3 +16,8 @@
 .close-button:active {
     background-color: var(--bg-color);
 }
+
+.choice-inactive {
+    background-color: var(--bg-color);
+    color: grey;
+}
