banner saying docs pertains to newest firmware

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <div style="position: absolute;top: 0;left: 0;width: 100%;background-color: #ffec75;height: 20px;text-align: center;font-weight: 600">Firmware version v0.5.1 is coming soon. To help beta test it now, please <a href="https://discourse.odriverobotics.com/t/firmware-v0-5-1-release-candidate-feedback-thread/5210">check it out</a>.</div>
+    <div style="position: absolute;top: 0;left: 0;width: 100%;background-color: #5bc0de;height: 20px;text-align: center;font-weight: 600">The docs reflect firmware version 0.5.1. There are many breaking <a href="https://github.com/madcowswe/ODrive/blob/master/CHANGELOG.md">changes</a>. Please find docs for v0.4.12 <a href="https://github.com/madcowswe/ODrive/blob/fw-v0.4.12/docs/getting-started.md">here</a>.</div>
     <div class="wrapper">
       <header>
         <div>
