temporarily disable API documentation

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -42,7 +42,7 @@
                 <li><a class="navitem{% if pagename == itemname %} currentitem{% endif %}" href="{% if prefix == '/' %}{{ site.baseurl }}{% endif %}{{ item.url }}" alt="{{ item.title }}">{{ item.title }}</a></li>
                 {% endfor %}
                 {% else %}
-                {% include apiindex.html %}
+                <!-- missing -->
                 {% endif %}
               </ul>
             </li>
