--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -337,6 +337,9 @@ header li {
 .navitem a {
   display: block;
   width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .levelbar {
