--- a/Firmware/fibre/cpp/interfaces_template.j2
+++ b/Firmware/fibre/cpp/interfaces_template.j2
@@ -38,7 +38,7 @@ public:
 [%- for enum in intf.enums %]
     enum [[enum.name | to_pascal_case]] {
 [%- for k, value in enum['values'].items() %]
-        [[((enum.name + k) | to_macro_case).ljust(32)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %],
+        [[((enum.name | to_macro_case) + "_" + (k | to_macro_case)).ljust(32)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %],
 [%- endfor %]
     };
 [%- endfor %]
