--- a/tools/enums_template.j2
+++ b/tools/enums_template.j2
@@ -8,7 +8,7 @@
 
 # [[enum.fullname]]
 [%- for k, value in enum['values'].items() %]
-[[(((enum.parent.name if enum.name in ['Error', 'Mode'] else '') + enum.name + k) | to_macro_case).ljust(40)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %]
+[[((((enum.parent.name if enum.name in ['Error', 'Mode'] else '') + enum.name) | to_macro_case) + "_" + (k | to_macro_case)).ljust(40)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %]
 [%- endfor %]
 [%- endif %]
 [%- endfor %]
